--- a/www/src/admin/templates/best_practice/add_best_practice.html
+++ b/www/src/admin/templates/best_practice/add_best_practice.html
@@ -59,9 +59,9 @@
                 </div>
 
                 <div class="col-md-6 mb-3">
-                  <label for="param_recommend_value" class="form-label">For RAC Only <span
+                  <label for="for_rac_only" class="form-label">For RAC Only <span
                       class="text-danger">*</span></label>
-                  <select class="form-select" id="param_recommend_value" name="param_recommend_value" required>
+                  <select class="form-select" id="for_rac_only" name="for_rac_only" required>
                     <option value="0">No</option>
                     <option value="1">Yes</option>
                   </select>
